[tool.poetry]
name = "engine-default-dependencies"
version = "0.1.0"
description = ""
authors = [" Yotam Azriel <yotam@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
tensorflow-datasets = "^4.5.2"
transformers = {version = "^4.17.0", markers = "platform_machine  == 'x86_64'"}
grpcio = "^1.47.0"
PyYAML = "^6.0"
pycodestyle = "^2.8.0"
imgaug = "^0.4.0"
Pillow = "^9.2.0"
python-json-logger = "^2.0.2"
ddtrace = "^1.2.2"
pymongo = "^4.1.1"
texthero = "^1.1.0"
plotly = "^5.9.0"
wfdb = "^4.0.0"
fastparquet = "^0.8.1"
pyarrow = "^8.0.0"
dataclasses-json = {version = "^0.5.7", markers = "platform_machine  == 'x86_64'"}
imbalanced-learn = {version = "^0.9.1", markers = "platform_machine  == 'x86_64'"}
azure-storage-blob = "^12.13.1"
datasets = "^2.5.1"
sentencepiece = "^0.1.97"
textblob = "^0.17.1"
py-readability-metrics = "^1.4.5"
DeepCellTL = "^0.12.4"
torch = "1.12.1"
tensorflow-io-gcs-filesystem = "0.30.0"
torchvision = "^0.13.0"
icecream = "^2.1.3"
kymatio = "^0.3.0"
loguru = "^0.7.0"
brotlipy = "^0.7.0"
cloudpickle = "^2.2.1"
furl = "^2.1.3"
ninja = "^1.11.1"
olefile = "^0.46"
orderedmultidict = "^1.0.1"
pathlib2 = "^2.3.7.post1"
seaborn = "^0.12.2"
typing-extensions = "^4.6.3"
pytorch-lightning = "^2.0.7"
code-loader-helpers = "1.0.13"
terminaltables = "^3.1.10"
kili = "^2.148.3"
omegaconf = "^2.3.0"
fvcore = "^0.1.5.post20221221"
yacs = "^0.1.8"
termcolor = "^2.4.0"
cityscapesscripts = "^2.2.2"
tabulate = "^0.9.0"
lvis = "^0.5.3"
psutil = "^5.9.8"
python-panopticon = "^0.4.0"
isort = "^5.13.2"
av = "^11.0.0"
iopath = "^0.1.10"
timm = "^0.9.12"
fairscale = "^0.4.13"
hydra-core = "^1.3.2"
albumentations = "1.3.1"
ultralytics = "8.0.158"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
